--- a/packages/react-ts-sonar/package.json
+++ b/packages/react-ts-sonar/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-react-ts-sonar",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "eslint config for react, typescript and sonar",
   "main": "index.js",
   "repository": {
@@ -8,7 +8,7 @@
     "url": "git+https://github.com/TinkGu/eslint-config.git"
   },
   "scripts": {
-    "release": "standard-version",
+    "release": "npx standard-version",
     "postpublish": "git push origin HEAD --follow-tags"
   },
   "keywords": [
