--- a/packages/taro-ts-style/package.json
+++ b/packages/taro-ts-style/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-taro-ts-style",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "eslint config for taro, typescript and jsx styles",
   "main": "index.js",
   "repository": {
@@ -8,7 +8,7 @@
     "url": "git+https://github.com/TinkGu/eslint-config.git"
   },
   "scripts": {
-    "release": "npx standard-version",
+    "release": "npx standard-version --tag-prefix=taro",
     "postpublish": "git push origin HEAD --follow-tags"
   },
   "keywords": [
