--- a/packages/taro-ts-style/package.json
+++ b/packages/taro-ts-style/package.json
@@ -24,6 +24,9 @@
     "url": "https://github.com/TinkGu/eslint-config/issues"
   },
   "homepage": "https://github.com/TinkGu/eslint-config#readme",
+  "dependencies": {
+    "goose-eslint-config-shared": "^1.0.0"
+  },
   "peerDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
