feat: make dependencies internal

--- a/packages/react-ts-sonar/package.json
+++ b/packages/react-ts-sonar/package.json
@@ -25,19 +25,19 @@
   },
   "homepage": "https://github.com/TinkGu/eslint-config#readme",
   "dependencies": {
-    "goose-eslint-config-shared": "^1.0.0"
-  },
-  "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.4.1",
-    "@typescript-eslint/parser": "^4.4.1",
-    "eslint": "^7.13.0",
+    "goose-eslint-config-shared": "^1.0.0",
     "eslint-import-resolver-typescript": "2.0.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-no-inline-styles": "^1.0.5",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-sonarjs": "^0.6.0",
+    "eslint-plugin-sonarjs": "^0.6.0"
+  },
+  "peerDependencies": {
+    "eslint": "^7.13.0",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
     "typescript": "^3.8.3"
   }
 }
