--- a/packages/taro-ts-style/package.json
+++ b/packages/taro-ts-style/package.json
@@ -25,17 +25,17 @@
   },
   "homepage": "https://github.com/TinkGu/eslint-config#readme",
   "dependencies": {
-    "goose-eslint-config-shared": "^1.0.0"
+    "goose-eslint-config-shared": "^1.0.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-no-inline-styles": "^1.0.5",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0"
   },
   "peerDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
     "eslint": "^7.13.0",
-    "eslint-config-taro": "3.2.12",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-no-inline-styles": "^1.0.5",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-config-taro": "^3.4.3",
     "typescript": "^3.8.3"
   }
 }
