--- a/packages/react-ts-sonar/package.json
+++ b/packages/react-ts-sonar/package.json
@@ -28,6 +28,7 @@
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
     "goose-eslint-config-shared": "^1.0.0",
+    "eslint-import-resolver-node": "0.3.4",
     "eslint-import-resolver-typescript": "2.0.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
