--- a/packages/react-ts-sonar/package.json
+++ b/packages/react-ts-sonar/package.json
@@ -30,6 +30,7 @@
     "goose-eslint-config-shared": "^1.0.0",
     "eslint-import-resolver-node": "0.3.4",
     "eslint-import-resolver-typescript": "2.0.0",
+    "eslint-plugin-check-file": "1.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-no-inline-styles": "^1.0.5",
